// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex renders flex 1`] = `
.c0 {
  display: flex;
}

<div
  class="c0"
  data-grid="flex"
>
  flex
</div>
`;

exports[`Flex renders flex column + md row 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
}

<div
  class="c0"
  data-class="flex-column"
  data-grid="flex"
  md="row"
>
  flex
</div>
`;

exports[`Flex renders flex column 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
}

<div
  class="c0"
  data-class="flex-column"
  data-grid="flex"
>
  flex
</div>
`;

exports[`Flex renders flex row 1`] = `
.c0 {
  display: flex;
}

<div
  class="c0"
  col="row"
  data-grid="flex"
>
  flex
</div>
`;
